#
# Copyright (C) Mellanox Technologies Ltd. 2001-2017.  ALL RIGHTS RESERVED.
#
# See file LICENSE for terms.
#

noinst_LIBRARIES = libucxprotobuf.a
noinst_HEADERS = ucxprotobuf.h

#The files to add to the library and to the source distribution
libucxprotobuf_a_SOURCES = \
    ucxprotobuf.h \
    ucxprotobuf.cc

libucxprotobuf_a_LIBADD = $(LIBOBJS) $(ALLOCA)

